deploy/argocd/apps/longhorn/kustomize/httproute/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-longhorn-tls
  namespace: longhorn-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: PLACEHOLDER_GATEWAY_NS  # Patched via Kustomize from gatewayAPI.controller.gatewayNamespace
  to:
  - group: ""
    kind: Secret
    name: longhorn-cert-tls
